<resources>
    <string name="app_name">PersianBall</string>
    <string name="share_pref_mail">share_pref_mail</string>
    <string name="share_pref_phone">share_pref_phone</string>
    <string name="share_pref_username">share_pref_username</string>
    <string name="share_pref_password">share_pref_password</string>
    <string name="share_pref_token">share_pref_token</string>
    <string name="share_pref_refresh_token">share_pref_refresh_token</string>
    <string name="share_pref_profile_image_url">share_pref_profile_image_url</string>
    <string name="notification_counter">notification_counter</string>
    <string name="home">خانه</string>
    <string name="store">فروشگاه</string>
    <string name="profile">پروفایل</string>
    <string name="academy">آکادمی</string>
    <string name="setting">داشبورد</string>
    <string name="login">ورود</string>
    <string name="signup">عضویت</string>
    <string name="hi_user">سلام ایمان</string>
    <string name="product_page">صفحه محصول</string>
    <string name="user_name">نام کاربری</string>
    <string name="password">رمز ورود</string>
    <string name="last_password">رمز عبور پیشین</string>
    <string name="repeat_password">تکرار رمز ورود</string>
    <string name="forget_password">رمز خود را فراموش کرده‌اید؟</string>
    <string name="remember_me">مرا به یاد داشته باش</string>
    <string name="have_not_account">حساب کاربری ندارید؟ ثبت‌نام</string>
    <string name="forget_password_page">فراموشی رمز عبور</string>
    <string name="email">ایمیل</string>
    <string name="enter_code">کد را وارد کنید</string>
    <string name="not_get_code">کد را دریافت نکردید؟</string>
    <string name="resend_code">دوباره ارسال کن</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="repeat_new_password">تکرار رمز عبور جدید</string>
    <string name="sign_up">ثبت‌نام</string>
    <string name="phone_number">شماره همراه</string>
    <string name="recovery_by_email">بازیابی توسط ایمیل</string>
    <string name="recovery_by_sms">بازیابی توسط اس‌ام‌اس</string>
    <string name="signup_by_phone_number">ثبت‌نام با موبایل</string>
    <string name="signup_by_email">ثبت‌نام با ایمیل</string>
    <string name="get_code">دریافت کد</string>
    <string name="submit">ثبت</string>
    <string name="change_info">ویرایش اطلاعات</string>
    <string name="login_to_show_profile">برای مشاهده این صفحه لاگین کنید</string>
    <string name="personal_info">اطلاعات شخصی</string>
    <string name="address_phone">تماس و آدرس</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="product_price">‏%s تومان</string>
    <string name="price_order"> ارزش مرسوله: %s تومان</string>
    <string name="date_order">تاریخ ثبت سفارش: %s</string>
    <string name="address_order">آدرس: %s</string>
    <string name="own_courses">دوره‌های‌ ثبت‌نام شده</string>
    <string name="the_progress">لیست سفارشات</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy">خرید</string>
    <string name="pre_watch">پیش‌نمایش</string>
    <string name="send_practice">دانلود فایل</string>
    <string name="Lessons">درس‌ها</string>
    <string name="specifications">مشخصات</string>
    <string name="time_of_holding">زمان/مکان برگزاری</string>
    <string name="course_week">‏%d هفته ‏%d جلسه</string>
    <string name="difficulty">سطح دوره: %s</string>
    <string name="course_duration">مدت دوره: ‏%s ساعت</string>
    <string name="video_count">‏%d ویدیو</string>
    <string name="products">محصولات</string>
    <string name="color">رنگ</string>
    <string name="count">تعداد</string>
    <string name="size">سایز</string>
    <string name="product_detail">صفحه محصول</string>
    <string name="add_product_shopping_cart">اضافه کردن به سبد خرید</string>
    <string name="sending_method">روش ارسال</string>
    <string name="postal_code">کد پستی: %s</string>
    <string name="pre_requisites">پیش نیازها</string>
    <string name="lessons">درس ها</string>
    <string name="try_again">مجددا تلاش کنید.</string>
    <string name="text_try_again">اشکالی در ارتباط با سرور به‌وجود آمده‌است. لطفا دوباره امتحان کنید.</string>
    <string name="btn_try_again">سعی مجدد</string>
    <string name="description">توضیحات</string>
    <string name="videos">ویدیوها</string>
    <string name="error_dto_default_message">مشکلی در برقراری ارتباط به وجود آمد</string>
    <string name="check_connection">لطفا اتصال دستگاه به اینترنت را چک کنید.</string>
    <string name="user_not_found">نام کاربری یا رمز عبور صحیح نیست.</string>
    <string name="invalid_phone_number">شماره موبایل صحیح نیست.</string>
    <string name="invalid_email">ایمیل صحیح نیست.</string>
    <string name="mobile_exist">شماره قبلا ثبت شده است.</string>
    <string name="email_exist">ایمیل قبلا ثبت شده است.</string>
    <string name="phone_number_not_found">این شماره موبایل قبلا ثبت نشده است.</string>
    <string name="invalid_code">کد وارد شده صحیح نمیباشد.</string>
    <string name="same_password">پسورد تکراری است.</string>
    <string name="wrong_password">پسورد پیشین اشتباه است.</string>
    <string name="wrong_password_new">تکرار پسورد مطابقت ندارد</string>
    <string name="week">هفته %s</string>
    <string name="week_count">‏%s هفته</string>
    <string name="section_count">‏%s جلسه</string>
    <string name="address">‏%s</string>
    <string name="error">مشکلی در برقراری با سرور به وجود آمده.</string>
    <string name="privacy">سیاست حفظ حریم شخصی پرشین بال \n
مقدمه\n
ما در پرشین بال به حریم خصوصی شما اهمیت می‌دهیم و متعهد به حفاظت از اطلاعات شخصی‌ای هستیم که شما در اختیار ما قرارداده اید. حریم خصوصی موضوعی است که باید توسط کاربران و ما مشترکا حفظ و مراقبت شود.\n\n

جمع‌آوری اطلاعات
\n-	اطلاعات شخصی: نام، آدرس ایمیل، شماره تماس، تاریخ تولد و جزئیات مربوط به علاقه‌مندی‌های ورزشی شما به منظور ارتباط آسان با شما و بهبود عملکرد سایت با توجه به نیازمندی کاربران مورد استفاده ما می باشد.
\n-	آدرس فیزیکی: برای ارسال بسته‌های پستی مانند توپ، لباس‌های ورزشی و سایر کالاهای ورزشی مورد استفاده قرار می‏گیرد.
\n-	اطلاعات مربوط به احراز هویت نظیر کد ملی برای صدور مدارک ورزشی و بیمه ورزشی مورد استفاده خواهد بود.\n\n

استفاده از اطلاعات
\n-	ارتباط با شما و ارائه خدمات و محصولات.
\n-	بهبود تجربیات شما از خدمات ما.
\n-	ارسال اطلاعات و پیشنهادات ویژه.
\n-	صدور مدارک ورزشی و ثبت نام در رویدادها و مسابقات.
\n-	ارائه و اداره بیمه‌های ورزشی.
\n-\n	ارسال بسته‌های پستی.\n
امنیت اطلاعات
\n-	ما از تدابیر امنیتی مناسب برای حفاظت از اطلاعات شخصی شما استفاده می‌کنیم.
\n-	رمز ورود اکانت‌های شما به صورت رمزنگاری شده ذخیره می‌شود و هیچ کس من جمله کارکنان ما توانایی مشاهده آن را ندارند.

مسئولیت کاربران
\n-	حفظ و نگهداری رمز عبور و نام کاربری بر عهده کاربران است و باید از فاش کردن آن به دیگران خودداری کنند.
\n-	در صورت تغییر شماره همراه یا آدرس ایمیل، کاربر باید با طریق نرم افزار واتس آپ این تغییر را به اطلاعکارشناس مربوطه رسانده و مراحل تایید هویتی خود را انجام دهد تا اطلاعات مربوط به ورود به سایت و اپلیکیشن به روز شود.\n

تغییرات در سیاست حفظ حریم شخصی
\n-	ما ممکن است این سیاست حفظ حریم شخصی را به‌روزرسانی کنیم و تغییرات از طریق وب‌سایت ما اعلام خواهد شد.\n

تماس با ما
\n-	اگر سوالی در مورد این سیاست حفظ حریم شخصی دارید، لطفاً با ما از طریق واتس آپ 09367007740 یا ایمیل info@persianball.ir تماس بگیرید.\n

تاریخ اثر
\n-	این سیاست حفظ حریم شخصی از تاریخ 01/05/1402 معتبر است.
</string>
    <string name="app_policy">حریم شخصی پرشین بال</string>
    <string name="send_support">لطفا فیلم تمرین خود را به همراه متن پیام برای شماره ۰۹۳۶۷۰۰۷۷۴۰ در پیام رسان های ایتا و یا واتساپ ارسال کنید.\n
    متن پیام:\nنام پشتیبان \n(نام و نام خانوادگی) فایل تمرین (نام دوره) هفته (شماره هفته) جلسه (شماره جلسه)
    </string>

    <array name="steps">
        <item>نشانی تحویل</item>
        <item>پرداخت</item>
        <item>سفارش ثبت شد</item>
    </array>
</resources>