<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_box_background">

        <ir.pattern.persianball.views.PersianBallTextView
            android:id="@+id/persianBallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/iran_sans_bold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            app:cardBackgroundColor="#E0E0E0"
            app:cardCornerRadius="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/persianBallTextView">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:backgroundTint="@android:color/transparent"
                app:tabBackground="@drawable/login_toggle_selector"
                app:tabGravity="fill"
                app:tabIndicatorColor="@android:color/transparent"
                app:tabIndicatorHeight="0dp"
                app:tabMode="fixed"
                app:tabRippleColor="@android:color/transparent"
                app:tabSelectedTextColor="@android:color/white"
                app:tabTextAppearance="@style/tab_text"
                app:tabTextColor="@android:color/black">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/phone_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_by_phone_number" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/email_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_by_email" />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeErrorColor="@color/red"
                app:counterOverflowTextColor="@color/red"
                app:errorTextColor="@color/red"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/iran_sans_bold"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:nextFocusDown="@id/user_name_edit_text"
                    android:singleLine="true"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:boxStrokeErrorColor="@color/red"
                app:counterOverflowTextColor="@color/red"
                app:errorTextColor="@color/red"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iran_sans_bold"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/user_name_edit_text"
                    android:singleLine="true"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxStrokeErrorColor="@color/red"
                app:counterOverflowTextColor="@color/red"
                app:errorTextColor="@color/red"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iran_sans_bold"
                    android:hint="@string/user_name"
                    android:nextFocusDown="@id/password_edit_text"
                    android:singleLine="true"
                    android:textSize="13sp"
                    app:boxStrokeErrorColor="@color/red" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="password_toggle"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iran_sans_bold"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="13sp"
                    app:boxStrokeErrorColor="@color/red"
                    app:counterOverflowTextColor="@color/red"
                    app:errorTextColor="@color/red" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <ir.pattern.persianball.views.PersianBallTextView
            android:id="@+id/signup_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_icon_bachground"
            android:fontFamily="@font/iran_sans_bold"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout" />

        <ir.pattern.persianball.views.PersianBallImageButton
            android:id="@+id/instagram"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/product_page_text_background"
            android:src="@drawable/ic_instagram"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

        <ir.pattern.persianball.views.PersianBallImageButton
            android:id="@+id/whatsapp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/product_page_text_background"
            android:src="@drawable/ic_whatsapp"
            app:layout_constraintBottom_toBottomOf="@+id/instagram"
            app:layout_constraintRight_toLeftOf="@+id/instagram"
            app:layout_constraintTop_toTopOf="@+id/instagram" />

        <ir.pattern.persianball.views.PersianBallImageButton
            android:id="@+id/youtube"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/product_page_text_background"
            android:src="@drawable/ic_youtube"
            app:layout_constraintBottom_toBottomOf="@+id/instagram"
            app:layout_constraintLeft_toRightOf="@+id/instagram"
            app:layout_constraintTop_toTopOf="@+id/instagram" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>