<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:padding="4dp"
            app:cardBackgroundColor="#DEF1F5"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/transparent"
                app:tabBackground="@drawable/profile_toggle_selector"
                app:tabGravity="fill"
                app:tabIndicatorColor="@android:color/transparent"
                app:tabIndicatorHeight="0dp"
                app:tabMode="fixed"
                app:tabRippleColor="@android:color/transparent"
                app:tabSelectedTextColor="@android:color/white"
                app:tabTextAppearance="@style/tab_text"
                app:tabTextColor="@android:color/black">


                <com.google.android.material.tabs.TabItem
                    android:id="@+id/change_password_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/phone_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_phone" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/personal_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_info" />


            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:paddingBottom="8dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView"
            app:layout_constraintStart_toStartOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            app:layout_constraintVertical_bias="0">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>